--- a/html/0-0_component.html
+++ b/html/0-0_component.html
@@ -114,6 +114,7 @@
                 <form>
                     <p>인풋</p>
                     <input type="text" class="input-nomal w300" placeholder="입력해주세요">
+                    <input type="text" class="input-nomal w300" placeholder="입력해주세요" readonly>
                     <input type="text" class="input-nomal w100p" placeholder="입력해주세요">
                     <p>라디오</p>
                     <input type="radio" name="ra" id="ra1"><label for="ra1" class="radio-nomal">선택1</label>
@@ -148,12 +149,45 @@
                     <input type="text" class="date-nomal w300" placeholder="시작연월">
                     <p>텍스트박스</p>
                     <div class="box-blue">
-                        <p>패딩이 사용하는 곳 마다 달라서 그때그때 수정해서 쓰면 됩니다.</p>
+                        <p><span class="underline">패딩이 사용하는 곳 마다</span> 달라서 그때그때 수정해서 쓰면 됩니다.</p>
                     </div>
                     <div class="box-wh">
                         <p>패딩이 사용하는 곳 마다 달라서 그때그때 수정해서 쓰면 됩니다.</p>
                     </div>
-                    
+                    <div class="position">
+                        <div class="position__list">
+                            <p>국무조정실 청년정책조정실 청년인재DB에서는 중복가입, 개인정보 도용 및 허위 가입정보로 인한 피해를 방지하기 위하여 회원인증 방법을 시행하고 있습니다.</p>
+                            <p>회원인증은 아래에서 원하시는 방법을 선택하여 진행하여 주시기 바랍니다.</p>
+                        </div>
+                    </div>
+
+                    <p>테이블</p>
+                    <div class="table-nomal">
+                        <div class="table-nomal-tr">
+                            <div class="table-nomal-th">수집∙이용목적</div>
+                            <div class="table-nomal-td">
+                                <ul class="container__list">
+                                    <li>『공공기관의 운영에 관한 법률』의 적용을 받는 공공기관의 기관장 및 임원</li>
+                                    <li>『공공기관의 운영에 관한 법률』의 적용을 받는 공공기관의 기관장 및 임원</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="table-nomal-tr">
+                            <div class="table-nomal-th">수집하는 개인정보 항목(필수)</div>
+                            <div class="table-nomal-td">이름, 아이디, 비밀번호, 성별, 생년월일, 핸드폰번호, 전화번호, 이메일</div>
+                        </div>
+                        <div class="table-nomal-tr">
+                            <div class="table-nomal-th">보유∙이용기간</div>
+                            <div class="table-nomal-td">회원탈퇴 또는 삭제요청 시 까지</div>
+                        </div>
+                        <div class="table-nomal-tr">
+                            <div class="table-nomal-th">개인정보 수집 동의 거부의 권리</div>
+                            <div class="table-nomal-td">귀하는 위의 개인정보 수집∙이용에 대한 동의를 거부할 권리가 있습니다.<br>
+                                다만, 미동의 시에는 회원가입 및 청년인재DB 시스템 이용이 제한될 수 있습니다.</div>
+                        </div>
+                    </div>
+                    <p class="table-nomal-footnote">※ 각주입니다.</p>
+
                     <div class="btn-wrap">
                         <button class="btn-wh btn-nomal">이전</button>
                         <button class="btn-bl btn-nomal">다음</button>
