--- a/html/1-4_회원가입-이용동의(인재용).html
+++ b/html/1-4_회원가입-이용동의(인재용).html
@@ -77,40 +77,128 @@
 
     <section id="contents">
         <div class="row">
-            <h2 class="contents-title">이용약관 동의</h2>
+            <h2 class="contents-title">개인정보 수집ㆍ이용ㆍ제공 동의</h2>
             <form>
                 <div class="container join3">
                     <div class="box-blue">
                         <p>
-                            국무조정실 청년정책조정실은 청년인재DB 회원관리를 위하여 아래와 같이 개인정보를 수집∙이용 하고자 합니다. 아래 내용을 자세히 읽으신 후 동의여부를 결정하여 주시기 바랍니다.
+                            청년인재데이터베이스 등록을 위하여 아래의 개인정보 수집ㆍ이용 및 제공에 대한 내용을 자세히 읽어보신 후 동의여부를 결정하여 주시기 바랍니다.
                         </p>
                     </div>
                     <div class="box-wh">
+                        <p class="join3-title">인적사항 관련 개인정보 수집/이용 내역 <strong class="color-red">(필수)</strong></p>
                         <div class="table-nomal">
                             <div class="table-nomal-tr">
-                                <div class="table-nomal-th">수집∙이용목적</div>
+                                <div class="table-nomal-th">수집 및 이용하는 개인정보 항목</div>
                                 <div class="table-nomal-td">
-                                    <ul class="container__list">
-                                        <li>『공공기관의 운영에 관한 법률』의 적용을 받는 공공기관의 기관장 및 임원</li>
-                                        <li>『공공기관의 운영에 관한 법률』의 적용을 받는 공공기관의 기관장 및 임원</li>
-                                    </ul>
+                                    성명, 성별, 생년월일, 휴대전화, 전자우편, 주된 활동지역
                                 </div>
                             </div>
                             <div class="table-nomal-tr">
-                                <div class="table-nomal-th">수집하는 개인정보 항목(필수)</div>
-                                <div class="table-nomal-td">이름, 아이디, 비밀번호, 성별, 생년월일, 핸드폰번호, 전화번호, 이메일</div>
+                                <div class="table-nomal-th">수집 및 이용 목적</div>
+                                <div class="table-nomal-td underline">청년인재DB 인재등록</div>
                             </div>
                             <div class="table-nomal-tr">
                                 <div class="table-nomal-th">보유∙이용기간</div>
-                                <div class="table-nomal-td">회원탈퇴 또는 삭제요청 시 까지</div>
-                            </div>
-                            <div class="table-nomal-tr">
-                                <div class="table-nomal-th">개인정보 수집 동의 거부의 권리</div>
-                                <div class="table-nomal-td">귀하는 위의 개인정보 수집∙이용에 대한 동의를 거부할 권리가 있습니다.<br>
-                                    다만, 미동의 시에는 회원가입 및 청년인재DB 시스템 이용이 제한될 수 있습니다.</div>
+                                <div class="table-nomal-td underline">만 39세 경과 시 또는 삭제요청 시까지</div>
                             </div>
                         </div>
                         <p class="table-nomal-footnote">※ 인물정보 등록시 청년인재DB 본인추천으로 수록∙관리됩니다.</p>
+                        <div class="agree-wrap">
+                            <span>위의 개인정보의 수집ㆍ이용에 동의하십니까? (</span>
+                            <input type="radio" name="ra1" id="ra1"><label for="ra1" class="radio-small mr20">동의함</label>
+                            <input type="radio" name="ra1" id="ra2"><label for="ra2" class="radio-small">동의하지 않음</label>
+                            <span>)</span>
+
+                        </div>
+                    </div>
+                    <div class="box-wh">
+                        <p class="join3-title">전문성 관련 개인정보 수집/이용 내역 <strong>(선택)</strong></p>
+                        <div class="table-nomal">
+                            <div class="table-nomal-tr">
+                                <div class="table-nomal-th">수집 및 이용하는 개인정보 항목</div>
+                                <div class="table-nomal-td">
+                                    학교경력, 직장경력, 관심분야, 주요 활동사항, 주요 결과물, 참여희망 분야, 지원동기
+                                </div>
+                            </div>
+                            <div class="table-nomal-tr">
+                                <div class="table-nomal-th">수집 및 이용 목적</div>
+                                <div class="table-nomal-td underline">청년인재DB 인재등록</div>
+                            </div>
+                            <div class="table-nomal-tr">
+                                <div class="table-nomal-th">보유∙이용기간</div>
+                                <div class="table-nomal-td underline">만 39세 경과 시 또는 삭제요청 시까지</div>
+                            </div>
+                        </div>
+                        <p class="table-nomal-footnote">※ 인물정보 등록시 청년인재DB 본인추천으로 수록∙관리됩니다.</p>
+                        <div class="agree-wrap">
+                            <span>위의 개인정보의 수집ㆍ이용에 동의하십니까? (</span>
+                            <input type="radio" name="ra2" id="ra3"><label for="ra3" class="radio-small mr20">동의함</label>
+                            <input type="radio" name="ra2" id="ra4"><label for="ra4" class="radio-small">동의하지 않음</label>
+                            <span>)</span>
+                        </div>
+                    </div>
+                    <div class="box-wh">
+                        <p class="join3-title">개인정보 제3자 제공 내역 <strong class="color-red">(필수)</strong></p>
+                        <div class="table-nomal">
+                            <div class="table-nomal-tr">
+                                <div class="table-nomal-th">수집 및 이용하는 개인정보 항목</div>
+                                <div class="table-nomal-td underline">
+                                    국가기관, 지방자치단체, 공공기관
+                                </div>
+                            </div>
+                            <div class="table-nomal-tr">
+                                <div class="table-nomal-th">제공 목적</div>
+                                <div class="table-nomal-td">「청년기본법」 제15조의2제1항 및 같은 법 시행령 제20조의3제3항 따라 정책결정과정에
+                                    청년의 참여를 지원</div>
+                            </div>
+                            <div class="table-nomal-tr">
+                                <div class="table-nomal-th">제공하는 항목</div>
+                                <div class="table-nomal-td">성명, 성별, 생년월일,
+                                    휴대전화, 전자우편, 주된 활동지역, 학교경력, 직장경력, 관심분야, 주요 활동사항, 주요 결과물, 참여희망 분야, 지원동기</div>
+                            </div>
+                            <div class="table-nomal-tr">
+                                <div class="table-nomal-th">제공 받는 자의 보유기간</div>
+                                <div class="table-nomal-td underline">정보활용목적 완료시까지</div>
+                            </div>
+                        </div>
+                        <p class="table-nomal-footnote">※ 인물정보 등록시 청년인재DB 본인추천으로 수록∙관리됩니다.</p>
+                        <div class="agree-wrap">
+                            <span>위의 개인정보의 수집ㆍ이용에 동의하십니까? (</span>
+                            <input type="radio" name="ra3" id="ra5"><label for="ra5" class="radio-small mr20">동의함</label>
+                            <input type="radio" name="ra3" id="ra6"><label for="ra6" class="radio-small">동의하지 않음</label>
+                            <span>)</span>
+                        </div>
+                    </div>
+                    <div class="box-wh">
+                        <p class="join3-title">청년인재데이터베이스 직접열람 동의 여부 <strong class="color-red">(필수)</strong></p>
+                        <div class="table-nomal">
+                            <div class="table-nomal-tr">
+                                <div class="table-nomal-th">열람할 수 있는 자</div>
+                                <div class="table-nomal-td underline">
+                                    국가기관, 지방자치단체, 공공기관
+                                </div>
+                            </div>
+                            <div class="table-nomal-tr">
+                                <div class="table-nomal-th">공개 목적 및 방법</div>
+                                <div class="table-nomal-td">「청년기본법」 제15조의2제2항에 따라 준용되는 「국가공무원법」 제19조의3제4항 및 「공직후보자 등에 관한 정보의 수집 및 관리에 관한 규정」 
+                                    제6조제3항에 따라
+                                    <span class="underline">데이터베이스를 통해 열람</span></div>
+                            </div>
+                            <div class="table-nomal-tr">
+                                <div class="table-nomal-th">공개 항목</div>
+                                <div class="table-nomal-td">성명, 성별, 생년월일,
+                                    성명, 성별, 생년월일,
+휴대전화, 전자우편, 주된 활동지역, 학교경력, 직장경력, 관심분야, 주요 활동사항, 주요 결과물, 참여희망 분야, 지원동기</div>
+                            </div>
+                        </div>
+                        <p class="table-nomal-footnote">※ 인물정보 등록시 청년인재DB 본인추천으로 수록∙관리됩니다.</p>
+                        <div class="agree-wrap">
+                            <span>위의 개인정보의 수집ㆍ이용에 동의하십니까? (</span>
+                            <input type="radio" name="ra4" id="ra7"><label for="ra7" class="radio-small mr20">동의함</label>
+                            <input type="radio" name="ra4" id="ra8"><label for="ra8" class="radio-small">동의하지 않음</label>
+                            <span>)</span>
+                        </div>
                     </div>
                     <div class="checkbox-wrap">
                         <input type="checkbox" id="ch1">
