--- a/html/2-1_소개.html
+++ b/html/2-1_소개.html
@@ -187,7 +187,7 @@
         <div class="modal_content w460">
           <div class="modal__title">
             <h1>모달타이틀</h1>
-            <button class="modal-close-btn"></button>
+            <button class="modal-close-btn ir_pm">닫기</button>
           </div>
         </div>
     </div>
@@ -195,7 +195,7 @@
         <div class="modal_content w460">
             <div class="modal__title">
                 <h1>전체메뉴</h1>
-                <button class="modal-close-btn"></button>
+                <button class="modal-close-btn ir_pm">닫기</button>
             </div>
             <div class="modal-menu-top">
                 <div><span>서비스 이용을 위해 </span><a href="#">로그인</a><span>이 필요합니다.</span></div>
