--- a/html/1-5_회원가입-정보등록(인재용).html
+++ b/html/1-5_회원가입-정보등록(인재용).html
@@ -101,7 +101,7 @@
                             <label for="">아이디</label>
                             <div class="join4-id">
                                 <input type="text" class="input-nomal w300" placeholder="아이디 입력 후 중복확인">
-                                <button class="btn-bl btn-nomal">중복확인</button>
+                                <button type="button" class="btn-bl btn-nomal" onclick="modalOn('modal-id-check')">중복확인</button>
                             </div>
                             <span>영문, 숫자로 조합하여 6~12자로 사용할 수 있습니다.</span>
                         </div>
@@ -205,15 +205,38 @@
         <div class="modal_content w460">
           <div class="modal__title">
             <h1>모달타이틀</h1>
-            <button class="modal-close-btn"></button>
+            <button class="modal-close-btn ir_pm">닫기</button>
           </div>
+        </div>
+    </div>
+    <div class="modal modal-id-check">
+        <div class="modal_content w460">
+            <div class="modal__title">
+                <h1>아이디 중복 확인</h1>
+                <button class="modal-close-btn ir_pm">닫기</button>
+            </div>
+            <div class="box-blue mb30">
+                <ul class="container__list">
+                    <li>사용하실 아이디를 입력하고 버튼을 클릭하세요.</li>
+                    <li>영문, 숫자로 조합하여 6~12자로 사용할 수 있습니다.</li>
+                </ul>
+            </div>
+            <p class="modal-title-small">아이디 검색</p>
+            <div class="input-button-wrap">
+                <input type="text" class="input-nomal" placeholder="아이디 입력 후 중복 검색">
+                <button  type='button' class="btn-wh btn-nomal">중복 검색</button>
+            </div>
+            <p class="input-button-val"><strong>admin2022</strong>은(는) 사용하실 수 있습니다.</p>
+            <div class="btn-wrap">
+                <button class="btn-bl btn-round w200">아이디 사용하기</button>
+            </div>
         </div>
     </div>
     <div class="modal modal-menu">
         <div class="modal_content w460">
             <div class="modal__title">
                 <h1>전체메뉴</h1>
-                <button class="modal-close-btn"></button>
+                <button class="modal-close-btn ir_pm">닫기</button>
             </div>
             <div class="modal-menu-top">
                 <div><span>서비스 이용을 위해 </span><a href="#">로그인</a><span>이 필요합니다.</span></div>
