--- a/html/1-7_회원가입-완료(공통).html
+++ b/html/1-7_회원가입-완료(공통).html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" integrity="sha512-aOG0c6nPNzGk+5zjwyJaoRUgCdOrfSDhmMID2u4+OIslr0GjpLKo7Xm0Ao3xmpM4T8AmIouRkqwj1nrdVsLKEQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/css/common.css">
-    <!-- 스와이퍼 -->
-    <link rel="stylesheet" href="/css/swiper.css">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/resistration.css">
+    <link rel="stylesheet" href="/css/join.css">
+
+
 
     <title>청년인재데이터베이스</title>
 </head>
@@ -23,7 +24,7 @@
     <header>
         <div class="header__top">
             <div class="row">
-                <a href="#">마이페이지</a>
+                <a href="#">로그인</a>
                 <a href="#">회원가입</a>
             </div>
         </div>
@@ -40,7 +41,7 @@
                             <li class="header__step2 "><a href="#" >인증방법 안내</a></li>
                         </ul>
                     </li>
-                    <li class="header__step1  temp-menu2" data-menuval="2"><a href="#" >인재정보등록</a>
+                    <li class="header__step1  temp-menu2  menu-on" data-menuval="2"><a href="#" >인재정보등록</a>
                     </li>
                     <li class="sub-menu-ok header__step1  temp-menu3" data-menuval="3"><a href="#" >검색요청</a>
                         <ul>
@@ -68,81 +69,23 @@
             </div>
         </div>
     </header>
-    <section id="slide-banner">
-        <div class="swiper-container">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <img class="pc-main" src="/img/img_main_bn-01.png" srcset="/img/img_main_bn-01@2x.png 2x, /img/img_main_bn-01@2x.png 3x " alt="청년의 꿈을 응원하는 청년인재데이터베이스">
-                    <img class="mobile-main" src="/img/img_main_bn-01-mobile.png" srcset="/img/img_main_bn-01-mobile@2x.png 2x, /img/img_main_bn-01-mobile@2x.png 3x " alt="청년의 꿈을 응원하는 청년인재데이터베이스">
-                </div>
-                <div class="swiper-slide">
-                    <img class="pc-main" src="/img/img_main_bn-02.png" srcset="/img/img_main_bn-02@2x.png 2x, /img/img_main_bn-02@2x.png 3x" alt="더 많은 청년들의 목소리를 담기위해!">
-                    <img class="mobile-main" src="/img/img_main_bn-02-mobile.png" srcset="/img/img_main_bn-02-mobile@2x.png 2x, /img/img_main_bn-02-mobile@2x.png 3x" alt="더 많은 청년들의 목소리를 담기위해!">
-                </div>
-                <div class="swiper-slide">
-                    <img class="pc-main" src="/img/img_main_bn-03.png" srcset="/img/img_main_bn-03@2x.png 2x, /img/img_main_bn-03@2x.png 3x" alt="시작부터 마지막까지 모든 과정을 청년과 함께!">
-                    <img class="mobile-main" src="/img/img_main_bn-03-mobile.png" srcset="/img/img_main_bn-03-mobile@2x.png 2x, /img/img_main_bn-03-mobile@2x.png 3x" alt="시작부터 마지막까지 모든 과정을 청년과 함께!">
-                </div>
-            </div>
+    <section id="title-banner">
+        <div class="title-banner">
+            <h1>회원가입</h1>
+            <img src="/img/img_main_bn.png" alt="배너이미지">
         </div>
     </section>
 
     <section id="contents">
-        <div class="row grid">
-            <div class="container item col-8 m960-col-12">
-                <h2 class="contents-title">청년인재데이터베이스 소개</h2>
-                <p>
-                    청년인재데이터베이스는 국가공무원법 제19조의3에 의하여 대한민국 정부의 주요직위 인선 시 우수인재를 임용할 수 있도록 공직후보자에 대한 정보를 수집하고 관리하는 국가인물정보관리 시스템입니다. <br>
-1999년 구축하여 현재 사회 각 분야 전문가 30만 여명이 수록되어 있습니다. 청년인재데이터베이스는 국가공무원법 제19조의3에 의하여 대한민국 정부의 주요직위 인선 시 우수인재를 임용할 수 있도록 공직후보자에 대한 정보를 수집하고 관리하는 국가인물정보관리 시스템입니다. <br>
-1999년 구축하여 현재 사회 각 분야 전문가 30만 여명이 수록되어 있습니다.<br>
-청년인재데이터베이스는 국가공무원법 제19조의3에 의하여 대한민국 정부의<br> 
-주요직위 인선 시 우수인재를 임용할 수 있도록 공직후보자에 대한 정보를<br> 
-수집하고 관리하는 국가인물정보관리 시스템입니다. 
-                </p>
-                <a href="#" class="more-btn more-btn-bl">자세히보기</a>
-                <img class="contents__img" src="/img/main-img.png" alt="소개이미지">
-            </div>
-            <div class="container item col-4 m960-col-12 login-compl">
-                <div class="user-photo"></div>
-                <p><strong>김서아</strong> 님,<br>좋은 하루 보내세요!</p>
-                
-                <div class="btn-wrap">
-                    <button class="btn-bl btn-nomal btn-full">나의 인재정보 등록</button>
+        <div class="row">
+            <div class="container register">
+                <img src="/img/join-compl.png" alt="회원가입 축하 이미지">
+                <div>
+                    <p class="register__title">청년인재데이터베이스<br><strong>회원가입이 완료</strong>되었습니다.</p>
+                    <p class="register__info">인증서 등록 후 인재정보 등록 및 모든 서비스를 이용하실 수 있습니다.<br>
+                        인증서 등록은 로그인 후 등록하실 수 있습니다.</p>
+                    <a href="#" download class="more-btn more-btn-bl">홈으로 이동</a>
                 </div>
-                <div class="btn-wrap">
-                    <button class="btn-wh btn-nomal">마이페이지</button>
-                    <button class="btn-close btn-nomal">로그아웃</button>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id="contents2">
-        <div class="row grid">
-            <div class="container item col-6 m960-col-12 notice">
-                <h2 class="contents-title">공지사항</h2>
-                <div class="notice-top">
-                    <div class="notice-date">
-                        <p>20</p>
-                        <span>2022.06</span>
-                    </div>
-                    <a href="#">
-                        <span class="line2"><strong>공지</strong>청년인재DB 20년 대한민국의 인재를 모으다</span>
-                        <span class="line2">국가인재DB 구축 20주년을 맞아 그동안의 국가인재DB 주요 성과 등을 정리하고
-                            미래 발전방향을 제시</span>
-                    </a>
-                </div>
-                <div class="notice-bottom">
-                    <a href="#"><span class="line1">청년인재데이터베이스 인물정보 [등록]하는 방법 및 서식</span><span>2022-02-11</span></a>
-                    <a href="#"><span class="line1">(공공기관) 청년인재DB 직접검색 매뉴얼 및 서약서 등 서식</span><span>2022-02-11</span></a>
-                    <a href="#"><span class="line1">청년인재데이터베이스 인물정보 [활용]하는 방법 및 서식</span><span>2022-02-11</span></a>
-                    <a href="#"><span class="line1">청년인재DB 20년 대한민국의 인재를 모으다청년인재DB 20년 대한민국의 인재를 모으다</span><span>2022-02-11</span></a>
-                </div>
-            </div>
-            <div class="container item col-6 m960-col-12 main-link-wrap">
-                <img class="pc-main" src="/img/main-link.png" alt="청년이 바꾼 오늘, 청년이 만든 내일">
-                <img class="mobile-main" src="/img/main-link-mobile.png" alt="청년이 바꾼 오늘, 청년이 만든 내일">
-                <a href="#" class="more-btn more-btn-wh">방문하기</a>
-
             </div>
         </div>
     </section>
@@ -175,7 +118,14 @@
              </div>
          </div>
     </footer>
-    <!-- .modal-menu는 모바일에서만 열려야 합니다 -->
+    <div class="modal">
+        <div class="modal_content w460">
+          <div class="modal__title">
+            <h1>모달타이틀</h1>
+            <button class="modal-close-btn ir_pm">닫기</button>
+          </div>
+        </div>
+    </div>
     <div class="modal modal-menu">
         <div class="modal_content w460">
             <div class="modal__title">
@@ -183,15 +133,13 @@
                 <button class="modal-close-btn ir_pm">닫기</button>
             </div>
             <div class="modal-menu-top">
-                <div class="login-compl">
-                    <div class="user-photo"></div>
-                    <p><strong>김서아</strong> 님,<br>좋은 하루 보내세요!</p>
-                    <div class="login-compl__btn-wrap">
-                        <a href="#" class="login-compl__btn1">인증서관리</a>
-                        <a href="#" class="login-compl__btn2">나의 인재정보</a>
-                        <a href="#" class="login-compl__btn3">마이페이지</a>
-                    </div>
+                <div><span>서비스 이용을 위해 </span><a href="#">로그인</a><span>이 필요합니다.</span></div>
+                <div class="btn-wrap">
+                    <button class="btn-bl btn-nomal">회원가입</button>
                 </div>
+                <button class="one-login-btn">
+                    <img src="/img/one-login-btn.png" alt="디지털원패스로 로그인">
+                </button>
             </div>
             <ul class="modal-menu-list">
                 <!-- .menu-step1에 .menu-on 추가하면 메뉴 오픈됩니다 -->
@@ -233,9 +181,5 @@
     <script src="http://code.jquery.com/jquery-migrate-1.2.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" integrity="sha512-uto9mlQzrs59VwILcLiRYeLKPPbS/bT71da/OEBYEwcdNUk8jYIy+D176RYoop1Da+f9mvkYrmj5MCLZWEtQuA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="/js/main.js"></script>
-
-    <!-- 스와이퍼 -->
-    <script src="/js/swiper.min.js"></script>
-    <script src="/js/swiper.js"></script>
 </body>
 </html>
