0921 익스플로러 대응

--- a/html/1-11_회원가입-가입내역인쇄(기관용).html
+++ b/html/1-11_회원가입-가입내역인쇄(기관용).html
@@ -90,39 +90,39 @@
                         <div class="join-info">
                             <div class="b-item">
                                 <label for="">아이디</label>
-                                <input type="text" readonly value="admin2022" class="input-nomal w300">
+                                <input type="text" readonly="readonly"  onfocus="this.blur()" value="admin2022" class="input-nomal w300">
                             </div>
                             <div class="b-item">
                                 <label for="">사용자명</label>
-                                <input type="text" readonly value="홍길동" class="input-nomal w300">
+                                <input type="text" readonly="readonly"  onfocus="this.blur()" value="홍길동" class="input-nomal w300">
                             </div>
                         </div>
                         <div class="join-info">
                             <div class="b-item">
                                 <label for="">소속기관</label>
-                                <input type="text" readonly value="국무조정실「청년정책조정실」" class="input-nomal w300">
+                                <input type="text" readonly="readonly"  onfocus="this.blur()" value="국무조정실「청년정책조정실」" class="input-nomal w300">
                             </div>
                             <div class="b-item">
                                 <label for="">부서명</label>
-                                <input type="text" readonly value="부서명" class="input-nomal w300">
+                                <input type="text" readonly="readonly"  onfocus="this.blur()" value="부서명" class="input-nomal w300">
                             </div>
                             <div class="b-item">
                                 <label for="">직장전화</label>
-                                <input type="tel" readonly value="042-123-4567" class="input-nomal w300">
+                                <input type="tel" readonly="readonly"  onfocus="this.blur()" value="042-123-4567" class="input-nomal w300">
                             </div>
                         </div>
                         <div class="join-info">
                             <div class="b-item">
                                 <label for="">대표전화</label>
-                                <input type="tel" readonly value="010-1234-5678" class="input-nomal w300">
+                                <input type="tel" readonly="readonly"  onfocus="this.blur()" value="010-1234-5678" class="input-nomal w300">
                             </div>
                             <div class="b-item">
                                 <label for="">이메일</label>
-                                <input type="email" readonly value="admin2022@email.com" class="input-nomal w300">
+                                <input type="email" readonly="readonly"  onfocus="this.blur()" value="admin2022@email.com" class="input-nomal w300">
                             </div>
                             <div class="b-item">
                                 <label for="">IP주소</label>
-                                <input type="text" readonly value="123.123.123" class="input-nomal w300">
+                                <input type="text" readonly="readonly"  onfocus="this.blur()" value="123.123.123" class="input-nomal w300">
                             </div>
                         </div>
                     </div>
