--- a/html/1-3_회원가입-회원 유형 선택.html
+++ b/html/1-3_회원가입-회원 유형 선택.html
@@ -84,7 +84,7 @@
                         ※ 회원유형 에 따라 회원가입 절차가 다르므로 해당되는 회원가입 유형을 선택하여 진행바랍니다.
                     </p>
                 </div>
-                <div class="box-wh down-wrap">
+                <div class="box-wh down-wrap col-6 m960-col-12">
                     <img src="/img/join2-1.png" alt="청년인재 회원">
                     <div>
                         <p class="down-wrap-title">청년인재 회원</p>
@@ -92,7 +92,7 @@
                         <a href="#" download class="more-btn more-btn-bl">가입하기</a>
                     </div>
                 </div>
-                <div class="box-wh down-wrap">
+                <div class="box-wh down-wrap col-6 m960-col-12">
                     <img src="/img/join2-2.png" alt="기관 회원">
                     <div>
                         <p class="down-wrap-title">기관 회원</p>
