--- a/html/1-5_회원가입-정보등록(인재용).html
+++ b/html/1-5_회원가입-정보등록(인재용).html
@@ -84,15 +84,15 @@
                         <div class="join4-top">
                             <div class="b-item">
                                 <label for="">성명</label>
-                                <input type="text" class="input-nomal w300" value="김시아" readonly placeholder="성명">
+                                <input type="text" class="input-nomal w300" value="김시아" readonly="readonly" placeholder="성명" onfocus="this.blur()">
                             </div>
                             <div class="b-item">
                                 <label for="">생년월일</label>
-                                <input type="text" class="input-nomal w300" value="19910101" readonly placeholder="주민등록 앞 6자리">
+                                <input type="text" class="input-nomal w300" value="19910101" readonly="readonly" placeholder="주민등록 앞 6자리" onfocus="this.blur()">
                             </div>
                             <div class="b-item b-item-01">
                                 <label for="">성별</label>
-                                <input type="text" class="input-nomal w300" value="여자" readonly placeholder="성별">
+                                <input type="text" class="input-nomal w300" value="여자" readonly="readonly" placeholder="성별" onfocus="this.blur()">
                             </div>
                         </div>
                         <div class="bottom-line"></div>
